--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@qiwi/npm-run-all": "^4.1.7",
+    "npm-run-all2": "^5.0.2",
     "@types/jest": "^26.0.24",
     "@types/yargs-parser": "^20.2.1",
     "coveralls": "^3.1.1",
